Specification by example

--- a/elutsykkel/agiilne/behavior-driven.html
+++ b/elutsykkel/agiilne/behavior-driven.html
@@ -158,13 +158,17 @@
                 href="https://www.geeksforgeeks.org/behavioral-driven-development-bdd-in-software-engineering/">https://www.geeksforgeeks.org/behavioral-driven-development-bdd-in-software-engineering/</a>
             <br>
         </p>
-        <div class="floating">
-          
-           
-            <button onclick="topFunction()" id="myBtn" title="Go to top">Algusesse</button>
-            <button onclick="javascript:window.history.back();" id="backBtn">Tagasi</button>
-            <br>
-        </div>
+        <div class="floating row">
+            <div class="column left">
+              <button onclick="topFunction()" id="myBtn" title="Go to top">Algusesse</button>
+            </div>
+            <div class="column middle" style="text-align: center; background-color: transparent;">
+              <button onclick="window.location.href='../../index.html'">Koju</button>
+            </div>
+            <div class="column right">
+              <button onclick="javascript:window.history.back();" id="backBtn">Tagasi</button>
+            </div>
+          </div>
         </div>
         <div class="column right">
 
