--- a/elutsykkel/agiilne/specification.html
+++ b/elutsykkel/agiilne/specification.html
@@ -37,14 +37,14 @@
       <p>Specification by Example on koostööline lähenemine nõuete ja testide defineerimiseks, mis põhineb realistlike
         näidete kasutamisel abstraktsete lausete asemel. See on oluline osa edukast nõuete ja testimisstrateegiast
         agiilsetes ja lean-protsessides nagu Scrum, Extreme Programming ja Kanban</p>
-      <p>Protsessi etapid:</p>
+      <p><h3>Protsessi etapid:</h3>
 
       <li>Nõuete defineerimine: Kasutada realistlikke näiteid, et selgitada nõudeid.</li>
       <li>Koostöö: Kõik meeskonnaliikmed osalevad nõuete defineerimises.</li>
       <li>Näidete kasutamine: Näited aitavad vältida kommunikatsiooniprobleeme ja tagavad ühise arusaama.</li>
       <li>Automatiseeritud valideerimine: Näidete põhjal luuakse automatiseeritud teste.</li>
 
-
+    </p>
 
       <br>
 
@@ -108,10 +108,16 @@
 
 
 
-      <div class="floating">
-        <button onclick="topFunction()" id="myBtn" title="Go to top">Algusesse</button>
-        <button onclick="javascript:window.history.back();" id="backBtn">Tagasi</button>
-        <br>
+      <div class="floating row">
+        <div class="column left">
+          <button onclick="topFunction()" id="myBtn" title="Go to top">Algusesse</button>
+        </div>
+        <div class="column middle" style="text-align: center; background-color: transparent;">
+          <button onclick="window.location.href='../../index.html'">Koju</button>
+        </div>
+        <div class="column right">
+          <button onclick="javascript:window.history.back();" id="backBtn">Tagasi</button>
+        </div>
       </div>
     </div>
     <div class="column right">
