--- a/elutsykkel/agiilne/test-driven.html
+++ b/elutsykkel/agiilne/test-driven.html
@@ -122,10 +122,16 @@
           target="_blank">https://www.geeksforgeeks.org/test-driven-development-tdd/?ref=header_outind</a>
       </p>
 
-      <div class="floating">
-      
-        <button onclick="topFunction()" id="myBtn" title="Go to top">Algusesse</button>
-        <button onclick="javascript:window.history.back();" id="backBtn">Tagasi</button>
+      <div class="floating row">
+        <div class="column left">
+          <button onclick="topFunction()" id="myBtn" title="Go to top">Algusesse</button>
+        </div>
+        <div class="column middle" style="text-align: center; background-color: transparent;">
+          <button onclick="window.location.href='../../index.html'">Koju</button>
+        </div>
+        <div class="column right">
+          <button onclick="javascript:window.history.back();" id="backBtn">Tagasi</button>
+        </div>
       </div>
     </div>
     <div class="column right">
