--- a/põhi.html
+++ b/põhi.html
@@ -19,10 +19,16 @@
 
             kesk
 
-            <div class="floating">
+            <div class="floating row">
+              <div class="column left">
                 <button onclick="topFunction()" id="myBtn" title="Go to top">Algusesse</button>
+              </div>
+              <div class="column middle" style="text-align: center; background-color: transparent;">
+                <button onclick="window.location.href='../../index.html'">Koju</button>
+              </div>
+              <div class="column right">
                 <button onclick="javascript:window.history.back();" id="backBtn">Tagasi</button>
-                <br>
+              </div>
             </div>
         </div>
         <div class="column right">
