--- a/elutsykkel/agiilne/continuous.html
+++ b/elutsykkel/agiilne/continuous.html
@@ -111,10 +111,16 @@
           href="https://www.devinterface.com/en/blog/test-driven-development-and-continuous-integration">https://www.devinterface.com/en/blog/test-driven-development-and-continuous-integration</a>
       </p>
 
-      <div class="floating">
-        <button onclick="topFunction()" id="myBtn" title="Go to top">Algusesse</button>
-        <button onclick="javascript:window.history.back();" id="backBtn">Tagasi</button>
-        <br>
+      <div class="floating row">
+        <div class="column left">
+          <button onclick="topFunction()" id="myBtn" title="Go to top">Algusesse</button>
+        </div>
+        <div class="column middle" style="text-align: center; background-color: transparent;">
+          <button onclick="window.location.href='../../index.html'">Koju</button>
+        </div>
+        <div class="column right">
+          <button onclick="javascript:window.history.back();" id="backBtn">Tagasi</button>
+        </div>
       </div>
     </div>
     <div class="column right">
