Data-driven development

--- a/elutsykkel/agiilne/acceptance.html
+++ b/elutsykkel/agiilne/acceptance.html
@@ -112,7 +112,7 @@
         </tr>
       </table>
       <br>
-      <p><a href="https://cucumber.io/">Cucumber</a> on laialdaselt kasutatav tööriist käitumispõhise arenduse (BDD) ja
+      <p><a href="https://cucumber.io/" target="_blank">Cucumber</a> on laialdaselt kasutatav tööriist käitumispõhise arenduse (BDD) ja
         ATDD jaoks. See võimaldab huvipooltel kirjutada aktseptantskriteeriume inimkeeles arusaadavas formaadis, mida
         nimetatakse Gherkiniks. Cucumber automatiseerib need aktseptantskriteeriumid testidena, mida saab rakenduse
         vastu käivitada. Cucumber toetab mitmeid programmeerimiskeeli, sealhulgas Java, Ruby ja JavaScript.</p>
@@ -121,10 +121,10 @@
         Kasutatud kirjandus:
         <br>
         <a
-          href="https://www.geeksforgeeks.org/acceptance-test-driven-development-atdd-in-software-engineering/">https://www.geeksforgeeks.org/acceptance-test-driven-development-atdd-in-software-engineering/</a>
+          href="https://www.geeksforgeeks.org/acceptance-test-driven-development-atdd-in-software-engineering/" target="_blank">https://www.geeksforgeeks.org/acceptance-test-driven-development-atdd-in-software-engineering/</a>
         <br>
         <a
-          href="https://medium.com/software-engineering-kmitl/acceptance-test-driven-development-69394f35200b">https://medium.com/software-engineering-kmitl/acceptance-test-driven-development-69394f35200b</a>
+          href="https://medium.com/software-engineering-kmitl/acceptance-test-driven-development-69394f35200b" target="_blank">https://medium.com/software-engineering-kmitl/acceptance-test-driven-development-69394f35200b</a>
       </p>
 
       <div class="floating row">
