--- a/elutsykkel/agiilne/behavior-driven.html
+++ b/elutsykkel/agiilne/behavior-driven.html
@@ -142,7 +142,7 @@
                 </tr>
             </table>
             <br>
-            <p><a href="https://cucumber.io/">Cucumber</a> on laialdaselt kasutatav BDD (käitumispõhise
+            <p><a href="https://cucumber.io/" target="_blank">Cucumber</a> on laialdaselt kasutatav BDD (käitumispõhise
                 arenduse) tööriist, mis toetab erinevaid programmeerimiskeeli nagu Ruby, Java, JavaScript ja teisi. See
                 võimaldab meeskondadel kirjutada täidetavaid spetsifikatsioone lihttekstina, kasutades Gherkini
                 süntaksit, ning automatiseerida neid sammudefinitsioonide abil.</p>
@@ -152,10 +152,10 @@
             Kasutatud kirjandus:
             <br>
             <a
-                href="https://et.wikipedia.org/wiki/K%C3%A4itumisel_p%C3%B5hinev_arendus">https://et.wikipedia.org/wiki/K%C3%A4itumisel_p%C3%B5hinev_arendus</a>
+                href="https://et.wikipedia.org/wiki/K%C3%A4itumisel_p%C3%B5hinev_arendus" target="_blank">https://et.wikipedia.org/wiki/K%C3%A4itumisel_p%C3%B5hinev_arendus</a>
             <br>
             <a
-                href="https://www.geeksforgeeks.org/behavioral-driven-development-bdd-in-software-engineering/">https://www.geeksforgeeks.org/behavioral-driven-development-bdd-in-software-engineering/</a>
+                href="https://www.geeksforgeeks.org/behavioral-driven-development-bdd-in-software-engineering/" target="_blank">https://www.geeksforgeeks.org/behavioral-driven-development-bdd-in-software-engineering/</a>
             <br>
         </p>
         <div class="floating row">
