--- a/elutsykkel/agiilne/continuous.html
+++ b/elutsykkel/agiilne/continuous.html
@@ -106,9 +106,9 @@
       <br>
       <p>Kasutatud kirjandus: <br>
         <a
-          href="https://en.wikipedia.org/wiki/Continuous_test-driven_development">https://en.wikipedia.org/wiki/Continuous_test-driven_development</a><br>
+          href="https://en.wikipedia.org/wiki/Continuous_test-driven_development" target="_blank">https://en.wikipedia.org/wiki/Continuous_test-driven_development</a><br>
         <a
-          href="https://www.devinterface.com/en/blog/test-driven-development-and-continuous-integration">https://www.devinterface.com/en/blog/test-driven-development-and-continuous-integration</a>
+          href="https://www.devinterface.com/en/blog/test-driven-development-and-continuous-integration" target="_blank">https://www.devinterface.com/en/blog/test-driven-development-and-continuous-integration</a>
       </p>
 
       <div class="floating row">
