--- a/elutsykkel/agiilne/domain-driven.html
+++ b/elutsykkel/agiilne/domain-driven.html
@@ -107,7 +107,7 @@
                 </tr>
             </table>
             <br>
-            <p><a href="https://jestjs.io/">Jest</a> on JavaScripti testimise raamistik, mille on loonud Facebook. See
+            <p><a href="https://jestjs.io/" target="_blank">Jest</a> on JavaScripti testimise raamistik, mille on loonud Facebook. See
                 pakub lihtsat ja intuitiivset testimise API-d, mis muudab JavaScripti koodi testide kirjutamise
                 lihtsaks. Jest pakub ka selliseid funktsioone nagu pilkamine ja hetktõmmiste testimine, mis aitavad teil
                 kirjutada tõhusamaid ja tõhusamaid teste.</p>
@@ -116,7 +116,7 @@
                 Kasutatud kirjandus:
                 <br>
                 <a
-                    href="https://www.geeksforgeeks.org/domain-driven-design-ddd/?ref=header_outind">https://www.geeksforgeeks.org/domain-driven-design-ddd/?ref=header_outind</a>
+                    href="https://www.geeksforgeeks.org/domain-driven-design-ddd/?ref=header_outind" target="_blank">https://www.geeksforgeeks.org/domain-driven-design-ddd/?ref=header_outind</a>
             </p>
 
 
