--- a/elutsykkel/agiilne/specification.html
+++ b/elutsykkel/agiilne/specification.html
@@ -85,7 +85,7 @@
       </table>
       <br>
       <p>
-        <a href="https://cucumber.io/">Cucumber</a> on üks populaarsemaid tööriistu, mis toetab Specification by Example
+        <a href="https://cucumber.io/" target="_blank">Cucumber</a> on üks populaarsemaid tööriistu, mis toetab Specification by Example
         meetodit. See tööriist kasutab
         Gherkin keelt, mis on lihtne ja loetav ka mitteprogrammeerijatele. Cucumber võimaldab luua automatiseeritud
         teste, mis põhinevad näidetele kirjutatud spetsifikatsioonidel. See tööriist sobib mitme erineva arendusstiili
@@ -96,13 +96,13 @@
       <p>Kasutatud kirjandus:
         <br>
         <a
-          href="https://djangostars.com/blog/ace-project-use-specification-by-example/">https://djangostars.com/blog/ace-project-use-specification-by-example/</a>
+          href="https://djangostars.com/blog/ace-project-use-specification-by-example/" target="_blank">https://djangostars.com/blog/ace-project-use-specification-by-example/</a>
         <a
-          href="https://blog.avenuecode.com/specification-by-example">https://blog.avenuecode.com/specification-by-example</a>
+          href="https://blog.avenuecode.com/specification-by-example" target="_blank">https://blog.avenuecode.com/specification-by-example</a>
         <br> <a
-          href="https://www.pmi-se.org/Kalendarium/Specification-by-Example_Stockholm_2017-11-30?l=en">https://www.pmi-se.org/Kalendarium/Specification-by-Example_Stockholm_2017-11-30?l=en</a>
+          href="https://www.pmi-se.org/Kalendarium/Specification-by-Example_Stockholm_2017-11-30?l=en" target="_blank">https://www.pmi-se.org/Kalendarium/Specification-by-Example_Stockholm_2017-11-30?l=en</a>
         <br> <a
-          href="https://www.avanscoperta.it/en/training/specification-by-example-workshop/">https://www.avanscoperta.it/en/training/specification-by-example-workshop/</a>
+          href="https://www.avanscoperta.it/en/training/specification-by-example-workshop/" target="_blank">https://www.avanscoperta.it/en/training/specification-by-example-workshop/</a>
       </p>
       <br>
 
