Data-oriented design

--- a/elutsykkel/agiilne/data-driven.html
+++ b/elutsykkel/agiilne/data-driven.html
@@ -89,6 +89,14 @@
           </td>
         </tr>
       </table>
+      <br>
+      <p>Andmepõhist arendust saab aidata abistavate andmepõhise tarkvara arendustööriistade, nagu <a
+          href="https://about.gitlab.com/" target="_blank">GitLab</a>, <a href="https://www.atlassian.com/software/jira"
+          target="_blank">JIRA</a> või <a
+          href="https://learn.microsoft.com/en-us/shows/level-up/introduction-to-visual-studio-team-services"
+          target="_blank">Visual Studio Team Services</a> kasutamine. Need tööriistad aitavad tõhustada andmete kogumist
+        ja analüüsi, mis
+        aitab muuta andmepõhise arenduse tõhusamaks ja edukamaks.</p>
 
       <br>
       <p>Kasutatud kirjandus: <br>
