Fix 'koju" button

--- a/elutsykkel/agiilne/specification.html
+++ b/elutsykkel/agiilne/specification.html
@@ -113,7 +113,7 @@
           <button onclick="topFunction()" id="myBtn" title="Go to top">Algusesse</button>
         </div>
         <div class="column middle" style="text-align: center; background-color: transparent;">
-          <button onclick="window.location.href='../../index.html'">Koju</button>
+          <button onclick="window.location.href='https://corvert.github.io/TaapTARge24/'">Koju</button>
         </div>
         <div class="column right">
           <button onclick="javascript:window.history.back();" id="backBtn">Tagasi</button>
