--- a/elutsykkel/agiilne/design-driven.html
+++ b/elutsykkel/agiilne/design-driven.html
@@ -129,9 +129,7 @@
           </button>
         </div>
         <div class="column middle" style="text-align: center; background-color: transparent">
-          <button onclick="window.location.href='../../index.html'">
-            Koju
-          </button>
+          <button onclick="window.location.href='https://corvert.github.io/TaapTARge24/'">Koju</button>
         </div>
         <div class="column right">
           <button onclick="javascript:window.history.back();" id="backBtn">
