fix picture src

--- a/elutsykkel/agiilneLisa.html
+++ b/elutsykkel/agiilneLisa.html
@@ -108,7 +108,7 @@
         kohanduda muutuvatele vajadustele ja vähendab riske arendusprotsessis.
       </p>
       <br>
-      <figure><img src="/elutsykkel/agiilne/agiilne.png" alt="Agiilne">
+      <figure><img src="agiilne/agiilne.png" alt="Agiilne">
         <figcaption> Meetodi suurim eelis on kliendi pidev kaasamine. Iga tsükli lõpus peaks klient saama uue
           töötava
           versiooni, millele on lisandunud funktsionaalsust või kuhu on tehtud kliendi soovidele vastavad
